1.90 approaches - Auto update almost complete   - Missing release notes - Removed annoying "check latest version?" popup - Actually is able to set components to disabled